overflow fixes

--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -688,7 +688,7 @@
     gap: 18px;
     padding: 33px 0;
     margin-left: 50px;
-    max-width: min(var(--layout-content-width), 85%);
+    max-width: min(var(--layout-content-width), 83%);
   }
 
   .features__path {
@@ -927,9 +927,10 @@
 @media (max-width: 480px) {
   .capabilities {
     margin-bottom: 60px;
-    padding-right: 6px;
+    padding-right: 2px;
     margin-right: unset;
     margin-left: 30px;
+    max-width: min(480px, 88%);
   }
 
   .capabilities__heading {
@@ -1116,8 +1117,8 @@
 @media (max-width: 480px) {
   .performance {
     margin-left: 50px;
-    padding-right: 6px;
-    max-width: min(480px, 85%);
+    padding-right: 2px;
+    max-width: min(480px, 83%);
     margin-bottom: 70px;
   }
 
@@ -1273,8 +1274,8 @@
 @media (max-width: 480px) {
   .comparison {
     margin-left: 50px;
-    padding-right: 6px;
-    max-width: min(480px, 85%);
+    padding-right: 2px;
+    max-width: min(480px, 83%);
     margin-bottom: 25px;
   }
 
@@ -1489,8 +1490,8 @@
 @media (max-width: 480px) {
   .testimonial {
     margin-left: 50px;
-    padding-right: 6px;
-    max-width: min(480px, 85%);
+    padding-right: 2px;
+    max-width: min(480px, 83%);
     margin-bottom: 90px;
   }
 
@@ -1622,8 +1623,8 @@
 @media (max-width: 480px) {
   .integration {
     margin-left: 50px;
-    padding-right: 6px;
-    max-width: min(480px, 85%);
+    padding-right: 2px;
+    max-width: min(480px, 83%);
     margin-bottom: 90px;
   }
 
@@ -1763,7 +1764,7 @@
 @media (max-width: 480px) {
   .open-source {
     margin-left: 50px;
-    max-width: min(480px, 85%);
+    max-width: min(480px, 83%);
     margin-bottom: 60px;
   }
 
@@ -1944,7 +1945,7 @@
 @media (max-width: 480px) {
   .call-to-action {
     margin-left: 50px;
-    max-width: min(480px, 85%);
+    max-width: min(480px, 83%);
     margin-bottom: 60px;
     flex-direction: column;
     gap: 20px;
